--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -17,6 +17,10 @@ jobs:
         clean: false  # whether to fetch clean each time
         submodules: recursive  # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
         persistCredentials: true
+      - name: "Install .NET SDK"
+        uses: actions/setup-dotnet@v4.0.0
+        with:
+          global-json-file: "./global.json"
       # Linux or macOS
       - task: Bash@3 
         displayName: Linux / OSX Build
