--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -23,6 +23,11 @@ variables:
     value: petabridge/phobos.actor.common #replace this
 
 steps:
+- name: "Install .NET SDK"
+  uses: actions/setup-dotnet@v4.0.0
+  with:
+    global-json-file: "./global.json"
+
 - task: BatchScript@1
   displayName: 'FAKE Build'
   inputs:
