--- a/src/Phobos.Actor.Common.Tests/Phobos.Actor.Common.Tests.csproj
+++ b/src/Phobos.Actor.Common.Tests/Phobos.Actor.Common.Tests.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\common.props" />
 
   <PropertyGroup>    
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>net481;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
