--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -17,6 +17,11 @@ jobs:
         clean: false  # whether to fetch clean each time
         submodules: recursive  # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
         persistCredentials: true
+      - task: UseDotNet@2
+        displayName: "Install .NET SDK"
+        inputs:
+          packageType: sdk
+          useGlobalJson: true
       # Linux or macOS
       - task: Bash@3 
         displayName: Linux / OSX Build
