--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -22,6 +22,11 @@ jobs:
         inputs:
           packageType: sdk
           useGlobalJson: true
+      - task: UseDotNet@2
+        displayName: "Install .NET 5.0 Runtime"
+        inputs:
+          packageType: runtime
+          version: 5.x
       # Linux or macOS
       - task: Bash@3 
         displayName: Linux / OSX Build
